--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
   justify-content: space-around;
   align-items: center;
   height: 85px;
-  padding: 5px 10%;
+  padding: 9px 20px;
 }
 .logo {
   height: 60px;
